# securecloud

./: .clang-format  .gitignore  README.md  makefile  msf-palettes-preview.html
client/qt-app/: CMakeLists.txt
client/qt-app/assets/: resources.qrc
client/qt-app/assets/qss/: sunlight_overlay.qss  theme_dark_C.qss  theme_light_D.qss
client/qt-app/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ThemeManager.cpp  ThemeManager.h  forgotpage.cpp  forgotpage.h  forgotpage.ui  landingpage.cpp  landingpage.h  landingpage.ui  main.cpp
db/migrations/audit/: V2__tables.sql
db/migrations/auth/: V2__tables.sql
db/migrations/files/: V2__tables.sql
db/migrations/messaging/: V2__tables.sql
gateway/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
gateway/config/: gateway.dev.yaml
gateway/include/gateway/: auditSink.hpp  authCache.hpp  authzFilter.hpp  httpServer.hpp  jwtFilter.hpp  metrics.hpp  router.hpp  tokenIntrospector.hpp  types.hpp  upstreamProxy.hpp
gateway/src/: auditSink.cpp  authCache.cpp  authzFilter.cpp  jwtFilter.cpp  main.cpp  metrics.cpp  router.cpp  server.hpp  tokenIntrospector.cpp  upstreamProxy.cpp
gateway/tests/: CMakeLists.txt  testRouter.cpp
ops/compose/: compose.dev.yml
ops/docker/: gateway.Dockerfile
ops/scripts/: db_migrate_all.ps1  db_migrate_all.sh  db_reset.ps1  db_reset.sh
services/auth-service/: CMakeLists.txt
services/auth-service/src/: main.cpp
